--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,6 @@
         "type": "node",
         "request": "launch",
         "name": "Launch Program",
-        "program": "${workspaceFolder}/scraper.js"
+        "program": "${workspaceFolder}/app.js"
     }]
 }
