--- a/package.json
+++ b/package.json
@@ -4,23 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "keywords": [],
-  "author": "",
+  "author": "Saher Piñero",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^6.4.0"
+    "eslint": "^6.4.0",
+    "nodemon": "^1.11.0"
   },
   "dependencies": {
     "async-lock": "^1.2.2",
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
     "express": "^4.17.1",
-    "express-generator": "^4.16.1",
+    "http-errors": "~1.6.3",
     "iconv-lite": "^0.5.0",
     "iso-8859-2": "^1.0.0",
+    "morgan": "~1.9.1",
+    "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
-    "string-collapse-white-space": "^5.1.0"
+    "node-schedule": "^1.3.2",
+    "sequelize-auto": "^0.4.29",
+    "twig": "~0.10.3"
   }
 }
