--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
     "node-schedule": "^1.3.2",
-    "sequelize-auto": "^0.4.29",
+    "sequelize": "^4.12.0",
     "twig": "~0.10.3"
   }
 }
