--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "iconv-lite": "^0.5.0",
     "iso-8859-2": "^1.0.0",
     "morgan": "~1.9.1",
-    "mysql": "^2.17.1",
+    "mysql-promise": "^5.0.0",
     "mysql2": "^1.7.0",
     "node-schedule": "^1.3.2",
     "sequelize": "^4.12.0",
